2004-11-07  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai: Add shared heap (standalone) support.

2004-11-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/queue.c (rt_queue_send): Pass message's payload size.

	* skins/rtai/syscall.c: Check for writability of the return buffer
	for all inquiry services.
	
	* skins/rtai/syscall.c (__rt_queue_free, __rt_queue_send): General
	fix.

	* skins/rtai/queue.c, skins/rtai/syscalls.c,
	skins/rtai/lib/queue.c: Fix various issues for user-space use.
	(rt_queue_alloc): Return NULL upon failure as expected.

	* skins/rtai/syscall.c (__rt_queue_bind): Allow mapping DMA memory.

	* skins/rtai/registry.c (rt_registry_remove): Semantics changed:
	forcibly unregisters the object.
	(rt_registry_remove_safe): Performs safe removal atomically when
	the object is fully unlocked/idle.

2004-11-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Revert change to deletion calls mode; they
	should not switch to primary.

	* skins/rtai/queue.c (rt_queue_create): Return -ENOMEM upon error
	return from xnheap_init_shared().

	* skins/rtai/lib/queue.c (rt_queue_create): Make sure we don't
	leave a dandling queue in kernel space if the mapping fails.

2004-11-04  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.2

2004-11-04  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c6 and
	2.6.8rc1-ppc-r6c9.

	* configure.in: Get rid of annnoying Kbuild warnings about undef'd
	symbols by moving vmlinux and Module.symvers out of the way (Idea
	brought by Jan Kiszka).

	* skins/rtai/registry.c (rt_registry_remove): Make sure we
	properly process XNBREAK.

	* skins/rtai/syscall.c: Make all deletion calls switch to primary
	mode before operating since rt_registry_remove() could wait.

	* skins/rtai: Provide exhaustive calling environment information.
	
	* skins/rtai/task.c: Add rt_task_remove_hook().

2004-11-01  Philippe Gerum  <rpm@xenomai.org>
