@@ -88,4 +88,8 @@ typedef u_long rt_handle_t;
 
 #define RT_HANDLE_INVALID ((rt_handle_t)0)
 
+typedef xnsigmask_t rt_sigset_t;
+
+#define RT_HANDLER_NONE XNTHREAD_INVALID_ASR
+
 #endif /* !_RTAI_TYPES_H */
